components/saint/BentoSection/styles.module.scss
@use 'sass:color';

.bentoSection {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  box-shadow: rgba(0, 0, 0, 0.12) 0px 6px 16px;
  font-size: 18px;
  font-weight: 400;
  border-radius: 5px;

  color: #ffffff;
  margin-bottom: 30px;
  position: relative;
  width: 100%;
  overflow: hidden;
  cursor: pointer;
  flex: 1;

  .header {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    background-color: #eaeaea;
    height: 40px;

    svg {
      margin-right: 30px;
    }
  }

  .content {
    display: flex;

    .chapters {
      color: #8f8d9c;
      font-weight: 700;
      margin-bottom: 15px;
      font-size: 15px;
      text-transform: capitalize;
    }

    .list {
      flex: 1;
    }

    .item {
      margin-bottom: 10px;
    }

    .toc {
      background: linear-gradient(
        246deg,
        rgb(117 2 15) 0%,
        rgb(0, 0, 0) 100%
      );
      padding: 30px 40px;
      display: flex;
      align-items: flex-start;
      font-size: 14px;
      flex-direction: column;
      flex-wrap: wrap;
      color: #ffcaca;
      align-content: space-between;
      line-height: 1.4;
      max-height: max-content;
      border-right: 1px solid #eaeaea;
      width: 33%;
      min-width: 400px;
      font-weight: 500;

      .image {
        position: relative;
        height: 75px;
        width: 75px;
        border-radius: 50%;
        overflow: hidden;
        margin-top: -50px;
        margin-bottom: 10px;
      }

      .dash {
        color: var(--gold);
        font-size: 14px;
        margin-right: 5px;
      }
    }

    .text {
      width: 66%;
      padding: 30px 40px;
      display: flex;
      flex-direction: column;

      .preview {
        width: 100%;
        display: -webkit-box;
        -webkit-line-clamp: 10;
        -webkit-box-orient: vertical;
        overflow: hidden;
        flex: 1;

        h2 {
          font-size: 15px;
          margin-bottom: 15px;
          color: #a7a7a7;
          font-weight: 700;
        }

        p {
          font-size: 14px;
          margin-bottom: 10px;
          color: #565656;
        }
      }
    }
  }

  .expand {
    flex: 1;
  }

  .wordCount {
    font-size: 12px;
    color: #8f8d9c;
  }

  .footer {
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin-top: 30px;
  }

  button {
    background: transparent;
    border-radius: 7px;
    color: var(--violet);
    font-size: 12px;
    padding: 8px 30px;
    border: 1px solid var(--gold);
    cursor: pointer;
    font-weight: 600;
    letter-spacing: 0.5px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 10px;
    transition: all 0.2s ease-in-out;

    &:hover {
      background-color: var(--gold);
    }
  }
}

