fixed related saints not showing

--- a/components/saint/BentoSection/styles.module.scss
+++ b/components/saint/BentoSection/styles.module.scss
@@ -7,7 +7,7 @@
   box-shadow: rgba(0, 0, 0, 0.12) 0px 6px 16px;
   font-size: 18px;
   font-weight: 400;
-  border-radius: 5px;
+  border-radius: 15px;
 
   color: #ffffff;
   margin-bottom: 30px;
